--- a/tmux/tm-theme.symlink/tm-theme.conf
+++ b/tmux/tm-theme.symlink/tm-theme.conf
@@ -9,4 +9,4 @@ set-option -g status-right $tm_spotify' '$tm_time
 set-window-option -g window-status-current-fg magenta
 set-option -g status-fg default
 
-source ~/.tm-theme/tm-solarized-light.conf
+source ~/.tm-theme/tm-dracula.conf
