Add aliases and fix tmux status bar

--- a/tmux/tm-theme.symlink/tm-theme.conf
+++ b/tmux/tm-theme.symlink/tm-theme.conf
@@ -6,6 +6,7 @@ tm_spotify='#[fg=$tm_color_music]#(osascript ~/.applescripts/spotify.scpt)'
 set-option -g status-interval 1
 set-option -g status-left ''
 set-option -g status-right $tm_spotify' '$tm_time
+set-option -g status-right-length 150
 set-window-option -g window-status-current-fg magenta
 set-option -g status-fg default
 
