--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ git:
     submodules: false
 
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
-before_install:
-    - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
-    - git submodule update --init --recursive
 
 services:
   - docker
@@ -17,9 +14,15 @@ matrix:
 
     - os: linux
       dist: trusty
+      before_install:
+          - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+          - git submodule update --init --recursive
 
     - os: osx
       osx_image: xcode8.1
+      before_install:
+          - sed -i '' 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+          - git submodule update --init --recursive
 
 notifications:
   email:
