--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ language: generic
 git:
     submodules: false
 
-# Use sed to replace the SSH URL with the public URL, then initialize submodules
-
 services:
   - docker
+
+before_install:
+  - curl -L https://github.com/aelsabbahy/goss/releases/download/_VERSION_/goss-linux-amd64 -o /usr/local/bin/goss && chmod +rx /usr/local/bin/goss
 
 matrix:
   include:
@@ -15,12 +16,14 @@ matrix:
     - os: linux
       dist: trusty
       before_install:
+          # Use sed to replace the SSH URL with the public URL, then initialize submodules
           - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
           - git submodule update --init --recursive
 
     - os: osx
       osx_image: xcode8.1
       before_install:
+          # Use sed to replace the SSH URL with the public URL, then initialize submodules
           - sed -i '' 's/git@github.com:/https:\/\/github.com\//' .gitmodules
           - git submodule update --init --recursive
 
