Introduce kitty, update vim-plug, language server for neovim, prezto update

--- a/config/config.symlink/kitty/kitty.conf
+++ b/config/config.symlink/kitty/kitty.conf
@@ -217,7 +217,7 @@ initial_window_height  600
 
 # Tab bar {{{
 # Which edge to show the tab bar on, top or bottom
-# tab_bar_edge bottom
+tab_bar_edge bottom
 
 # The separator between tabs in the tab bar
 # tab_separator " ┇"
@@ -516,7 +516,7 @@ map ctrl+alt+2          goto_tab 2
 # macos_titlebar_color system
 
 # Hide the kitty window's title bar on macOS.
-macos_hide_titlebar yes
+macos_hide_titlebar no
 
 # Use the option key as an alt key. With this set to no, kitty will use
 # the macOS native Option+Key = unicode character behavior. This will
