--- a/config/config.symlink/kitty/kitty.conf
+++ b/config/config.symlink/kitty/kitty.conf
@@ -10,7 +10,7 @@
 # bold/italic/bold-italic variants. By default they are derived automatically,
 # by the OSes font system. Setting them manually is useful for font families
 # that have many weight variants like Book, Medium, Thick, etc. For example:
-font_family Source Code Pro
+font_family Fira Code
 # bold_font Source Code Pro Bold
 # italic_font Source Code Pro Italic
 # bold_italic_font Source Code Pro Bold Italic
@@ -317,12 +317,12 @@ color15  #ffffff
 # control all aspects of kitty, including sending text to kitty windows,
 # opening new windows, closing windows, reading the content of windows, etc.
 # Note that this even works over ssh connections.
-# allow_remote_control no
+allow_remote_control yes
 
 # The value of the TERM environment variable to set. Changing this can break
 # many terminal programs, only change it if you know what you are doing, not
 # because you read some advice on Stack Overflow to change it.
-# term xterm-kitty
+term xterm
 
 
 # }}}
