--- a/config/config.symlink/kitty/kitty.conf
+++ b/config/config.symlink/kitty/kitty.conf
@@ -10,7 +10,8 @@
 # bold/italic/bold-italic variants. By default they are derived automatically,
 # by the OSes font system. Setting them manually is useful for font families
 # that have many weight variants like Book, Medium, Thick, etc. For example:
-font_family MonoLisa
+# font_family MonoLisa
+font_family FiraCode Nerd Font
 # bold_font Source Code Pro Bold
 # italic_font Source Code Pro Italic
 # bold_italic_font Source Code Pro Bold Italic
